[project]
name = "langgraph-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "langchain>=0.3.26",
    "langchain-anthropic>=0.3.16",
    "langchain-openai>=0.3.27",
    "langgraph>=0.5.1",
    "pydantic>=2.11.7",
]
